# phippery

./: .buildinfo  .git_ignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  PhiP_seq_analysis_CIS.Rmd  README.md  alignments-pipeline.html  bkg-model.html  command-line-interface.html  environment.yml  esc-prof.html  examples.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  phippery.eigen.html  phippery.escprof.html  phippery.modeling.html  phippery.normalize.html  phippery.utils.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  streamlit-app.html  the-rest-of-it.html
_modules/: index.html
_sources/: alignments-pipeline.rst.txt  bkg-model.rst.txt  command-line-interface.rst.txt  esc-prof.rst.txt  index.rst.txt  introduction.rst.txt  phippery.eigen.rst.txt  phippery.escprof.rst.txt  phippery.modeling.rst.txt  phippery.normalize.rst.txt  phippery.utils.rst.txt  streamlit-app.rst.txt
docs/: CLI.rst  Makefile  Nextflow.rst  README.md  alignments-pipeline.rst  annotation-tables.rst  annotations.rst  bkg-model.rst  buildDocs.sh  command-line-interface.rst  conf.py  conf.py.orig  development.rst  esc-prof.rst  examples.rst  index.rst  installation.rst  interactive-visualization.rst  introduction.rst  quick-start.rst  streamlit-app.rst  the-rest-of-it.rst  under-the-hood.rst
notebooks/: phip_analysis_python.ipynb
phippery/: PhipData.py  __init__.py  cli.py  collapse.py  eigen.py  escprof.py  fold_analysis.py  gampois.py  modeling.py  negbinom.py  normalize.py  phip_data.py  phipdata.py  phippery_cli.py  plotting.py  string.py  svd.py  tidy.py  utils.py  zscore.py
scrips/: PhiP_seq_fold_analysis.py  phip_analysis_python.ipynb  (+2 more)
(+75 files in other folders)
