# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phippery"
version = "1.0.2"
description = "Tools for analyzing PhIP-Seq Data."
readme = "README.md"
authors = [
    { name = "Jared Galloway", email= "jgallowa@fredhutch.org" },
    { name = "Kevin Sung", email = "ksung@fredhutch.org" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["phippery", "phipseq", "phage", "modeling", "phip"]
dependencies = [
    "click",
    "numpy",
    "pandas",
    "scipy>=1.7.1",
    "xarray>=0.19.0",
    "statsmodels",
    "POT",
    "biopython"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-pep8",
    "pytest-datadir",
    "pre-commit",
    "black",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-click",
    "bumpver"
]
[tool.poetry]
readme = "README.md"

[project.urls]
documentation = "https://matsengrp.github.io/phippery/"
repository = "https://github.com/matsengrp/phippery"


[tool.setuptools]
packages = ["phippery"]

[project.scripts]
phippery = "phippery.cli:cli"


[tool.bumpver]
current_version = "1.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"phippery/__init__.py" = ["{version}"]
#"README.md" = [
#    "{version}",
#]

